--- a/app/views/articles/_single_story.html.erb
+++ b/app/views/articles/_single_story.html.erb
@@ -22,17 +22,6 @@
   <div class="crayons-story__body">
     <div class="crayons-story__top">
       <div class="crayons-story__meta">
-        <div class="crayons-story__author-pic">
-          <% if story.cached_organization && !@organization_article_index %>
-          <a class="crayons-logo crayons-logo--l" href="/<%= story.cached_organization.slug %>">
-            <img alt="<%= story.cached_organization.name %> logo" src="<%= story.cached_organization.profile_image_90 %>" class="crayons-logo__image" loading="lazy" />
-          </a>
-          <% end %>
-
-          <a href="/<%= story.cached_user.username %>" class="crayons-avatar <% if story.cached_organization && !@organization_article_index %> crayons-avatar--s absolute -right-2 -bottom-2 border-solid border-2 border-base-inverted <% else %> crayons-avatar--l <% end %> ">
-            <img src="<%= story.cached_user.profile_image_90 %>" alt="<%= story.cached_user.username %> profile" class="crayons-avatar__image" loading="lazy" />
-          </a>
-        </div>
         <div>
           <div>
             <a href="/<%= story.cached_user.username %>" class="crayons-story__secondary fw-medium m:hidden">
@@ -98,7 +87,7 @@
       <% end %>
     </div>
 
-    <div class="crayons-story__indention">
+    <div>
       <h2 class="crayons-story__title">
         <a href="<%= story.path %>" data-preload-image="<%= cloud_cover_url(story.main_image) %>" id="article-link-<%= story.id %>">
           <%= story.title %>
